# Cpp98Options

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cpp98opts-config.cmake  dependencies.cmake  project_options.cmake  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  chapter.cpp  common.h  cpp98opts.cpp  description.cpp  option.cpp  optsType.cpp
src/include/cpp98opts/: chapter.h  cpp98opts.h  description.h  option.h  optsType.h
test/: CMakeLists.txt  check_options.cpp  check_options.h  checkoptions.cpp
uml/: full_project.puml
